fixed 320 - 369px layout not being aligned correctly

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -165,7 +165,6 @@
     .form__wrapper {
         .form__section {
             display: flex;
-            align-items: center;
 
             .row__one,
             .row__two,
@@ -182,6 +181,13 @@
                     display: flex;
                     flex-direction: column;
                 }
+            }
+        }
+
+        .form__button--wrapper {
+            
+            .create__account {
+                width: 85%;
             }
         }
     }
